# bracabric

./: README.md
template/: CMakeLists.txt  CMakeLists_Linux.txt  CMakeLists_mac.txt
template/assets/OBJET3D/Animaux/: sharke.max
template/assets/models/scene2/: abstract3.3ds
template/assets/skybox/blood/: up.tga
template/glimac/include/Core/: Monde.hpp  Objet3D.hpp  Scene.hpp  Trajectoire.hpp
template/glimac/include/Geometry/: Cone.hpp  Sphere.hpp
template/glimac/include/Graphics/: Mesh.hpp  MeshLoader.hpp
template/glimac/src/: chemin.cpp
template/glimac/src/Camera/: TrackballCamera.cpp
template/glimac/src/Geometry/: Geometry.cpp
template/glimac/src/Graphics/: Mesh.cpp  MeshLoader.cpp
template/projet/: CMakeLists.txt  essaiTrajCam.cpp  essaiTrajCam.txt  essaiUpload.cpp  essaiUpload.txt  essai_Shader.cpp  fish.cpp  game.cpp  main.cpp  main.txt  scene1.cpp  scene2.cpp  scene3.cpp
template/projet/scenes/scene1/: Objets3D.txt  Spherical_Maze.txt  Tas.txt  chemin.txt  cone.txt  cube.txt  d12.txt  quad.txt  tetraedre.txt
template/projet/scenes/scene2/: Objets3D.txt  Tas.txt  assiette.txt  beer.txt  beer2.txt  cat.txt  cell.txt  faon.txt  fence.txt  figurine.txt  goldfish.txt  liquid.txt  oxygen.txt  seahorse.txt  snowflake.txt  superbowl.txt
template/projet/scenes/scene3/: Objets3D.txt  Tas.txt  bird.txt  camel.txt  extintor.txt  globe.txt  house.txt  nanosuit.txt  (+1 more)
template/projet/shaders/: 3D.vs.glsl  fichiervide  lampe_torche.fs.glsl  lampe_torche.vs.glsl  normals.fs.glsl  skybox_lampe_torche.fs.glsl  skybox_lampe_torche.vs.glsl  tex3D.fs.glsl
(+81 files in other folders)
